<resources>
    <string name="app_name">Binder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Username</string>
    <string name="tag">Identificarsi per accedere alle funzioni </string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="Logout" />
    <string name="admin_home">Funzioni disponibili</string>
</resources>