<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.admin.admin_adduser">

    <!-- Username -->


    <!-- Password -->

    <!--Re Password -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_newuserwrap"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="477dp"
        android:textColorHint="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_newuser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--register-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_newpasswordwrapped"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/et_newpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_repasswordwrapped"
        android:layout_width="389dp"
        android:layout_height="87dp"
        android:layout_below="@+id/et_newpasswordwrapped"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-23dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@android:color/darker_gray">

        <EditText
            android:id="@+id/et_renewpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_date"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_above="@+id/btn_register"
        android:layout_below="@+id/spinnerusertype"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="-120dp"
        android:layout_marginBottom="70dp"
        android:hint="Date Select"
        android:textSize="30dp">

    </com.google.android.material.textview.MaterialTextView>

    <Spinner
        android:id="@+id/spinnerusertype"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/btn_register"
        android:layout_below="@+id/et_repasswordwrapped"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="157dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/register"
        android:textColor="@android:color/white" />


</RelativeLayout>